feat:swagger documentation for random products
